# gboard

./: CMakeLists.txt  README.txt  gboard.service
defs/: de-latin1-nodeadkeys.def
layouts/: CMakeLists.txt  de-latin1-mini.gboard  de-latin1-nodeadkeys.def  de-latin1-short.def  de-latin1-short.gboard  de-mini.gboard
src/: config.h  dbus_introspection.xml.c  gbd_config.h  gboard_im.c  gboardim.c  main.c  org.gitorious.gboard.gschema.xml  popup.builder  preferences.builder
src/classes/: app.c  app.h  keyboard.c  keyboard.h  layout.c  layout.h  x11emitter.c  x11emitter.h
src/interfaces/: emitter.c  emitter.h
